force-app/main/default/src/objects/Loop__LoopSettings__c/fields/Loop__DocuSign_Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>Loop__DocuSign_Account_Ids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a semi-colon delimited list of DocuSign Account Ids that this organization, profile, or user can chose from. (Limit 6 Account Ids)</inlineHelpText>
    <label>DocuSign Account Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>