force-app/main/default/src/objects/Loop__LoopSettings__c/fields/Loop__DocuSign_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Loop__DocuSign_Account_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a semi-colon delimited list of Account Names that correspond to the DocuSign Account Ids. (Limit 6 Account Names)</inlineHelpText>
    <label>DocuSign Account Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>