force-app/main/default/src/objects/Loop__LoopSettings__c/fields/Loop__DocuSign_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Loop__DocuSign_User_Ids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a semi-colon delimited list of DocuSign User Ids that correspond to the DocuSign Account Ids. (Limit 6 User Ids)</inlineHelpText>
    <label>DocuSign User Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>