force-app/main/default/src/objects/Loop__LoopSettings__c/fields/Loop__Veeva_Vault_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Loop__Veeva_Vault_Subdomain__c</fullName>
    <description>The customer specific subdomain used for Veeva Vault API calls.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Veeva Vault Subdomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>